# PS4EYECam

./: .gitmodules  CMakeLists.txt  GenerateProjectFiles_Win32.bat  GenerateProjectFiles_X64.bat  InitialSetup_X64.bat
driver/: CMakeLists.txt
driver/include/: ps4eye.h
driver/src/: CMakeLists.txt  ps4eye.cpp
sdl/: CMakeLists.txt  main.cpp
